# FreakyRTOS

./: ADC.c  FIFOsimple.h  OS.c  OS_Fifo.c  OS_Fifo.h  OS_Heap.c  OS_LaunchPad.c  OS_Lists.c  OS_Lists.h  OS_MailBox.c  README.md  ST7735.c  ST7735.h  can0.h  eDisk.c
ELF_Utils/: loader.c
OS_CLI_Commands/: CLI_Commands.c  CLI_Commands.h  cat.c  exec.c  ls.c  mkdir.c  touch.c  umount.c  write.c
OS_FatFS/: eFile.c  eFile.h
heapTesting_offchip/: heap.c  main.c  run.sh  tlsf.c
sw/: ADC.h  FIFOsimple.c  Interpreter.c  Interpreter.h  OS.h  OS_Heap.h  OS_LaunchPad.h  OS_Sema4.c  UART0int.c  UART0int.h  can0.c  eDisk.h  osasm_gcc.s  tlsf.c
sw/ELF_Utils/: loader_config.h
sw/OS_CLI_Commands/: cd.c  mkfs.c  mount.c  pwd.c  rm.c
sw/OS_FatFS/: ff.c
sw/heapTesting_offchip/: CMakeLists.txt  heap.h
unity/: unity.c  unity_internals.h
